--- a/views/settings.html
+++ b/views/settings.html
@@ -86,67 +86,128 @@
                   <div class="caret"></div>
                 </div>
                 <ul class="menu"></ul>
+                </div>
                 <form id="boardParametersForm" class="boardParametersForm">
                     <input type="hidden" id="ovenIdForBoards">
                     <label for="boardNumber">Board Number:</label>
                     <input type="number" id="boardNumber" placeholder="Enter board number" required autocomplete="off">
             
-                    <h3>Parameters</h3>
-
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="temperatureUpper">Temperature Upper:</label>
                     <input type="number" id="temperatureUpper" placeholder="Enter upper limit for temperature" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="temperatureLower">Temperature Lower:</label>
                     <input type="number" id="temperatureLower" placeholder="Enter lower limit for temperature" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="p1Upper">P1 Upper:</label>
                     <input type="number" id="p1Upper" placeholder="Enter upper limit for P1" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="p1Lower">P1 Lower:</label>
                     <input type="number" id="p1Lower" placeholder="Enter lower limit for P1" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="p2Upper">P2 Upper:</label>
                     <input type="number" id="p2Upper" placeholder="Enter upper limit for P2" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="p2Lower">P2 Lower:</label>
                     <input type="number" id="p2Lower" placeholder="Enter lower limit for P2" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="t1Upper">T1 Upper:</label>
                     <input type="number" id="t1Upper" placeholder="Enter upper limit for T1" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="t1Lower">T1 Lower:</label>
                     <input type="number" id="t1Lower" placeholder="Enter lower limit for T1" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="t2Upper">T2 Upper:</label>
                     <input type="number" id="t2Upper" placeholder="Enter upper limit for T2" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="t2Lower">T2 Lower:</label>
                     <input type="number" id="t2Lower" placeholder="Enter lower limit for T2" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="vxUpper">Vx Upper:</label>
                     <input type="number" id="vxUpper" placeholder="Enter upper limit for Vx" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="vxLower">Vx Lower:</label>
                     <input type="number" id="vxLower" placeholder="Enter lower limit for Vx" required autocomplete="off">
-            
+                        </div>
+                </div> 
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="vzUpper">Vz Upper:</label>
                     <input type="number" id="vzUpper" placeholder="Enter upper limit for Vz" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="vzLower">Vz Lower:</label>
                     <input type="number" id="vzLower" placeholder="Enter lower limit for Vz" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="ctUpper">Ct Upper:</label>
                     <input type="number" id="ctUpper" placeholder="Enter upper limit for Ct" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="ctLower">Ct Lower:</label>
                     <input type="number" id="ctLower" placeholder="Enter lower limit for Ct" required autocomplete="off">
-            
+                        </div>
+                </div>
+
+                    <div class="entry-div">
+                    <div class="first-param">
+                            
                     <label for="vtUpper">Vt Upper:</label>
                     <input type="number" id="vtUpper" placeholder="Enter upper limit for Vt" required autocomplete="off">
-            
+                    </div>
+
+                    <div class="second-param">
                     <label for="vtLower">Vt Lower:</label>
                     <input type="number" id="vtLower" placeholder="Enter lower limit for Vt" required autocomplete="off">
-            
+                        </div>
+                </div>
                     <button type="submit">Save Board Parameters</button>
                 </form>
             </div>
